add JWT authentication feature
